syntax = "proto3";

option java_package = "stream.models.proto.responses";
option java_generate_equals_and_hash = true;

message AddPartitionResponse {
   int64 partitionId = 1;
   string topic = 2;
}
